--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-09 14:26+0300\n"
-"PO-Revision-Date: 2013-05-09 22:41+0200\n"
+"PO-Revision-Date: 2013-05-15 21:44+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -3517,7 +3517,7 @@ msgstr "Dátum"
 
 #: ../code/application/views/restricted/user_favorite_properties.php:24
 msgid "Name"
-msgstr ""
+msgstr "Név"
 
 #: ../code/application/views/restricted/user_favorite_properties.php:40
 #: ../code/application/views/city_view.php:210
@@ -9366,8 +9366,8 @@ msgid ""
 "By clicking \"Create Account\" you confirm that you accept the Terms of "
 "Service and Privacy Policy."
 msgstr ""
-"A \"Fiók létrehozása\" gombra kattintva a Szerződési Feltételek és az "
-"Adatvédelmi Szabályzat is elfogadásra kerülnek."
+"A \"Fiók létrehozása\" gombra kattintva Ön elfogadja a Szerződési "
+"Feltételeket és az Adatvédelmi Szabályzatot"
 
 #: ../code/application/views/helpfile/pofields.php:801
 #: ../code/application/views/helpfile/pofields.php:835
@@ -9532,29 +9532,29 @@ msgstr ""
 "fenti szolgáltatások. "
 
 #: ../code/application/views/helpfile/pofields.php:831
-#, fuzzy, php-format
+#, php-format
 msgid "Existing account"
-msgstr "Fiók létrehozása"
+msgstr "Meglévő fiók"
 
 #: ../code/application/views/helpfile/pofields.php:832
-#, fuzzy, php-format
+#, php-format
 msgid "Create new account"
-msgstr "Fiók létrehozása"
+msgstr "Hozzon létre új fiókot"
 
 #: ../code/application/views/helpfile/pofields.php:833
 #, php-format
 msgid "New password"
-msgstr ""
+msgstr "Új jelszó"
 
 #: ../code/application/views/helpfile/pofields.php:836
 #, php-format
 msgid "Show room types"
-msgstr ""
+msgstr "Mutassa a szobatípusokat"
 
 #: ../code/application/views/helpfile/pofields.php:837
 #, php-format
 msgid "Hide room types"
-msgstr ""
+msgstr "Ne mutassa a szobatípusokat"
 
 #: ../code/application/views/helpfile/pofields.php:838
 #, php-format
