--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-09 14:26+0300\n"
-"PO-Revision-Date: 2013-04-29 21:20+0200\n"
+"PO-Revision-Date: 2013-05-15 22:04+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3490,7 +3489,7 @@ msgstr "날짜"
 
 #: ../code/application/views/restricted/user_favorite_properties.php:24
 msgid "Name"
-msgstr ""
+msgstr "이름"
 
 #: ../code/application/views/restricted/user_favorite_properties.php:40
 #: ../code/application/views/city_view.php:210
@@ -9250,8 +9249,8 @@ msgid ""
 "By clicking \"Create Account\" you confirm that you accept the Terms of "
 "Service and Privacy Policy."
 msgstr ""
-"\"계정 만들기\"를 클릭하여 서비스 이용 약관과 개인 정보 취급 방침에 동의해 주"
-"십시오."
+" \"계정 만들기\"를 클릭하여 서비스 이용 약관과 개인 정보 취급 방침에 동의해 "
+"주십시오."
 
 #: ../code/application/views/helpfile/pofields.php:801
 #: ../code/application/views/helpfile/pofields.php:835
@@ -9406,29 +9405,29 @@ msgid ""
 msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php:831
-#, fuzzy, php-format
+#, php-format
 msgid "Existing account"
-msgstr "계정 만들기"
+msgstr "기존 계정"
 
 #: ../code/application/views/helpfile/pofields.php:832
-#, fuzzy, php-format
+#, php-format
 msgid "Create new account"
-msgstr "계정 만들기"
+msgstr "새 계정 만들기"
 
 #: ../code/application/views/helpfile/pofields.php:833
 #, php-format
 msgid "New password"
-msgstr ""
+msgstr "새 암호"
 
 #: ../code/application/views/helpfile/pofields.php:836
 #, php-format
 msgid "Show room types"
-msgstr ""
+msgstr "객실 유형보기"
 
 #: ../code/application/views/helpfile/pofields.php:837
 #, php-format
 msgid "Hide room types"
-msgstr ""
+msgstr "객실 유형 숨기기"
 
 #: ../code/application/views/helpfile/pofields.php:838
 #, php-format
