--- a/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-09 14:26+0300\n"
-"PO-Revision-Date: 2013-04-29 21:24+0200\n"
+"PO-Revision-Date: 2013-05-16 22:12+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3510,7 +3509,7 @@ msgstr "料金"
 
 #: ../code/application/views/restricted/user_favorite_properties.php:24
 msgid "Name"
-msgstr ""
+msgstr "名前"
 
 #: ../code/application/views/restricted/user_favorite_properties.php:40
 #: ../code/application/views/city_view.php:210
@@ -9270,15 +9269,15 @@ msgid ""
 "By clicking \"Create Account\" you confirm that you accept the Terms of "
 "Service and Privacy Policy."
 msgstr ""
-"By clicking \"Create Account\" you confirm that you accept the Terms of "
-"Service and Privacy Policy."
+"”アカウントを作成する”をクリックすることにより当サービス利用規約と個人情報ポ"
+"リシーにご了承いただいたと見なされます。"
 
 #: ../code/application/views/helpfile/pofields.php:801
 #: ../code/application/views/helpfile/pofields.php:835
 #: ../code/application/views/helpfile/pofields.php~:801
 #, php-format
 msgid "Create account"
-msgstr "「アカウントを開く」"
+msgstr "アカウント作成"
 
 #: ../code/application/views/helpfile/pofields.php:802
 #: ../code/application/views/helpfile/pofields.php~:802
@@ -9426,29 +9425,29 @@ msgid ""
 msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php:831
-#, fuzzy, php-format
+#, php-format
 msgid "Existing account"
-msgstr "「アカウントを開く」"
+msgstr "既存のアカウント"
 
 #: ../code/application/views/helpfile/pofields.php:832
-#, fuzzy, php-format
+#, php-format
 msgid "Create new account"
-msgstr "「アカウントを開く」"
+msgstr "新規アカウントの作成"
 
 #: ../code/application/views/helpfile/pofields.php:833
 #, php-format
 msgid "New password"
-msgstr ""
+msgstr "新しいパスワード"
 
 #: ../code/application/views/helpfile/pofields.php:836
 #, php-format
 msgid "Show room types"
-msgstr ""
+msgstr "ルームタイプを見る"
 
 #: ../code/application/views/helpfile/pofields.php:837
 #, php-format
 msgid "Hide room types"
-msgstr ""
+msgstr "ルームタイプを隠す"
 
 #: ../code/application/views/helpfile/pofields.php:838
 #, php-format
