--- a/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_lang_ml.po
+++ b/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_lang_ml.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-09 14:26+0300\n"
-"PO-Revision-Date: 2013-04-29 21:39+0200\n"
+"PO-Revision-Date: 2013-05-20 21:38+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -9519,6 +9519,12 @@ msgid ""
 "leave later and are open 24 hours a day. Please review the list of services "
 "offered by this particular property to confirm they are available."
 msgstr ""
+"Toto je čas, kdy bude váš pokoj připraven v den vašeho příjezdu a čas, kdy "
+"máte pokoj opustit v den vašeho odjezdu.Pokud přijedete dříve nebo odjedete "
+"později, většina ubytovacích zařízení uskladní vaše zavazadla na bezpečném "
+"místě, které je přístupné 24 hodin denně.Prosím zkontrolujte si seznam "
+"služeb nabízených konkrétním ubytovacímzařízením, abyste si potvrdili, že "
+"jsou k dispozici."
 
 #: ../code/application/views/helpfile/pofields.php:831
 #, fuzzy, php-format
