--- a/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-09 14:26+0300\n"
-"PO-Revision-Date: 2013-05-16 22:44+0200\n"
+"PO-Revision-Date: 2013-05-20 21:37+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -9462,6 +9462,11 @@ msgid ""
 "leave later and are open 24 hours a day. Please review the list of services "
 "offered by this particular property to confirm they are available."
 msgstr ""
+"Tähän aikaan on sinun huone valmis saapumis päivänä ja aika jona huone "
+"pitäisi olla tyhjä lähtemis päivänä.Melkein kaikki majoitukset tallentaa "
+"matkatavarasi turvalliseen paikkaan jos saavuit aikaisemmin tai lähdet "
+"myöhemmin ja ovat auki 24/7. Ole hyvä ja tarkista majoituksesi palvelu "
+"listaa, varmistakseen palvelujen saatavuus."
 
 #: ../code/application/views/helpfile/pofields.php:831
 #, fuzzy, php-format
