--- a/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-09 14:26+0300\n"
-"PO-Revision-Date: 2013-05-16 22:12+0200\n"
+"PO-Revision-Date: 2013-05-20 21:36+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -9423,6 +9423,10 @@ msgid ""
 "leave later and are open 24 hours a day. Please review the list of services "
 "offered by this particular property to confirm they are available."
 msgstr ""
+"到着日にお客様のお部屋がご準備できる時間と、出発日にお部屋を出なければいけな"
+"い時間です。ご到着が早い場合や遅く出発する場合、ほとんどの施設ではお客様の荷"
+"物を安全な場所で24時間お預かりします。各施設でご提供可能なサービスのリストを"
+"ご確認ください。"
 
 #: ../code/application/views/helpfile/pofields.php:831
 #, php-format
