--- a/languages/ci/locale/zh_CN/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/zh_CN/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-09 14:26+0300\n"
-"PO-Revision-Date: 2013-04-26 20:43+0200\n"
+"PO-Revision-Date: 2013-05-20 21:38+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -9263,6 +9262,9 @@ msgid ""
 "leave later and are open 24 hours a day. Please review the list of services "
 "offered by this particular property to confirm they are available."
 msgstr ""
+"这是你到达那天你的房间准备就绪的时间以及你退房那天需要离开房间的时间。 如果你"
+"提前到达或延迟离开大多数住处都会把你的行李保存在安全的地方并且一天24小时有人"
+"值班。请阅读住处提供的服务列表来确认住处提供的服务。"
 
 #: ../code/application/views/helpfile/pofields.php:831
 #, fuzzy, php-format
