--- a/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_api_cs.po
+++ b/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_api_cs.po
@@ -3,18 +3,18 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-09 14:26+0300\n"
-"PO-Revision-Date: 2012-07-04 10:36-0800\n"
-"Last-Translator: Guillaume <gbourdages@graphem.ca>\n"
+"PO-Revision-Date: 2013-05-20 21:37+0200\n"
+"Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: .\n"
-"X-Poedit-Language: French\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: C:\\Users\\Louis-Michel\\workspace_pweb\\auberges"
 "\\trunk\\system\\application\n"
 "X-Poedit-SearchPath-1: F:\\5 - Eclipse Workspace\\AubergeSVN\\auberges\\trunk"
@@ -9285,6 +9285,12 @@ msgid ""
 "leave later and are open 24 hours a day. Please review the list of services "
 "offered by this particular property to confirm they are available."
 msgstr ""
+"Toto je čas, kdy bude váš pokoj připraven v den vašeho příjezdu a čas, kdy "
+"máte pokoj opustit v den vašeho odjezdu.Pokud přijedete dříve nebo odjedete "
+"později, většina ubytovacích zařízení uskladní vaše zavazadla na bezpečném "
+"místě, které je přístupné 24 hodin denně.Prosím zkontrolujte si seznam "
+"služeb nabízených konkrétním ubytovacímzařízením, abyste si potvrdili, že "
+"jsou k dispozici."
 
 #: ../code/application/views/helpfile/pofields.php:831
 #, php-format
