--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-09 14:26+0300\n"
-"PO-Revision-Date: 2013-05-15 22:04+0200\n"
+"PO-Revision-Date: 2013-05-20 21:36+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -9403,6 +9403,10 @@ msgid ""
 "leave later and are open 24 hours a day. Please review the list of services "
 "offered by this particular property to confirm they are available."
 msgstr ""
+"귀하의 도착일과 출발일에 객실을 이용하실 수 있는 시간입니다.귀하가 일찍 도착"
+"하거나 늦게 떠나실 경우, 귀하의 수하물을 호텔의 안전한 공간에 보관하실 수 있"
+"습니다.호텔 대부분이 이러한 서비스를 제공하며 하루 24시간 운영됩니다. 서비스"
+"를 이용하기 위해서 호텔에서 제공되는 서비스의 목록을 확인하십시오."
 
 #: ../code/application/views/helpfile/pofields.php:831
 #, php-format
