--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
@@ -4951,10 +4951,11 @@ msgid ""
 "will find the hotel's contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-"Zaplatíte nyní pouze zálohu (%d%% z celkové částky) jako potvrzení a "
-"zajištění vaší rezervace. Zbývající částku (%d%%) splatíte při příjezdu. "
-"Informaci o ubytovacím zařízení (email,adresu,telefonní číslo…) naleznete v "
-"potvrzujícím emailu po dokončení rezervace."
+"Vous ne payez que le dépôt (%d%% du montant total) pour confirmer et "
+"garantir votre réservation maintenant. Le montant restant (%d%%) est payable "
+"à l'arrivée. Vous trouverez les coordonnées de létablissment (email, "
+"adresse, numéro de téléphone …) dans votre email de confirmation après avoir "
+"effectué votre réservation."
 
 #: ../code/application/views/hw/booking_avail_view.php:758
 #: ../code/application/views/hb/booking_avail_view.php:719
