--- a/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
@@ -4957,10 +4957,11 @@ msgid ""
 "will find the hotel's contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-"Zaplatíte nyní pouze zálohu (%d%% z celkové částky) jako potvrzení a "
-"zajištění vaší rezervace. Zbývající částku (%d%%) splatíte při příjezdu. "
-"Informaci o ubytovacím zařízení (email,adresu,telefonní číslo…) naleznete v "
-"potvrzujícím emailu po dokončení rezervace."
+"Vous ne payez que le dépôt (%d%% du montant total) pour confirmer et "
+"garantir votre réservation. Le montant restant (%d%%) est payable à votre "
+"arrivée. Vous trouverez les coordonnées de l’établissement (email, adresse, "
+"numéro de téléphone …) dans votre courriel de confirmation après avoir "
+"effectué votre réservation."
 
 #: ../code/application/views/hw/booking_avail_view.php:758
 #: ../code/application/views/hb/booking_avail_view.php:719
