french po may 24 V3

--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
@@ -6469,7 +6469,7 @@ msgstr "Voirs vos favoris"
 #: ../code/application/views/helpfile/pofields.php~:215
 #, php-format
 msgid "Remove this property"
-msgstr "Enlever cette propriété "
+msgstr "Enlever cet établissement "
 
 #: ../code/application/views/helpfile/pofields.php:216
 #: ../code/application/views/helpfile/pofields.php~:216
@@ -8199,7 +8199,7 @@ msgstr " de "
 #: ../code/application/views/helpfile/pofields.php~:628
 #, php-format
 msgid "Please see selected properties to compare on top of the page."
-msgstr "Les propriétés sélectionnées à comparer sont visibles en haut de cette page."
+msgstr "Les établissements sélectionnés à comparer sont visibles en haut de cette page."
 
 #: ../code/application/views/helpfile/pofields.php:646
 #: ../code/application/views/helpfile/pofields.php~:646
@@ -8413,7 +8413,7 @@ msgstr "Adresse"
 #: ../code/application/views/helpfile/pofields.php~:753
 #, php-format
 msgid "The lowest price per person per night in a dorm in this property:"
-msgstr "Le prix le plus bas par personne et par nuit dans un dortoir dans cette établissement:"
+msgstr "Le prix le plus bas par personne et par nuit dans un dortoir dans cet établissement:"
 
 #: ../code/application/views/helpfile/pofields.php:754
 #: ../code/application/views/helpfile/pofields.php~:754
@@ -8787,7 +8787,7 @@ msgstr "Nous sommes désolés mais le nombre maximum d'établissements favoris q
 #: ../code/application/views/helpfile/pofields.php:839
 #, php-format
 msgid "This property has been saved in your \"My account\" section. You can now easily book it at a later date if you wish."
-msgstr "Cette propriété a été enregistrée dans votre section « Mon compte ». Vous pouvez maintenant facilement réserver à une date ultérieure si vous le souhaitez."
+msgstr "Cet établissement a été enregistré dans votre section « Mon compte ». Vous pouvez maintenant facilement le réserver à une date ultérieure si vous le souhaitez."
 
 #: ../code/application/views/helpfile/pofields.php~:822
 #, php-format
@@ -8827,14 +8827,12 @@ msgid "Number of nights:"
 msgstr "Nombre de nuits :"
 
 #: ../code/application/views/mustache/save_property_dialog.php:38
-#, fuzzy
 msgid "character left"
-msgstr "Caractères restants:"
+msgstr "Caractère restant"
 
 #: ../code/application/views/mustache/save_property_dialog.php:39
-#, fuzzy
 msgid "characters left"
-msgstr "Caractères restants:"
+msgstr "Caractères restants"
 
 #: ../code/application/views/mustache/save_property_dialog.php:45
 msgid "Update Note"
@@ -8842,7 +8840,7 @@ msgstr "Mise à jour de vos notes"
 
 #: ../code/application/views/mustache/save_property_dialog.php:50
 msgid "Save Note"
-msgstr "Enregistrer cette note"
+msgstr "Sauvegarder cette note"
 
 #: ../code/application/views/mustache/property_list.php:9
 msgid "Info"
