french po may 24 v6

--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -4516,7 +4516,7 @@ msgstr "Votre Sélection"
 #: ../code/application/views/hw/booking_view.php:1047
 #, php-format
 msgid "You only pay the deposit (%d%% of total amount) to confirm and secure your reservation now. The remaining amount (%d%%) is payable upon arrival. You will find the hotel's contact information (email, address, telephone number…) in your confirmation email after you have made your reservation."
-msgstr "Vous ne payez que le dépôt (%d%% du montant total) pour confirmer et garantir votre réservation maintenant. Le montant restant (%d%%) est payable à l'arrivée. Vous trouverez les coordonnées de létablissment (email, adresse, numéro de téléphone …) dans votre email de confirmation après avoir effectué votre réservation."
+msgstr "Vous ne payez que le dépôt (%d%% du montant total) pour confirmer et garantir cette réservation maintenant. Le montant restant (%d%%) est payable à l'arrivée. Vous trouverez les coordonnées de l'établissement (email, adresse, numéro de téléphone …) dans votre email de confirmation après avoir effectué votre réservation."
 
 #: ../code/application/views/hw/booking_avail_view.php:758
 #: ../code/application/views/hb/booking_avail_view.php:719
@@ -4889,7 +4889,7 @@ msgstr "Information "
 #: ../code/application/views/hb/booking_view.php:96
 #, php-format
 msgid "You only pay the deposit (10%% of total amount) to confirm and secure your reservation now. The remaining amount (90%%) is payable upon arrival. You will find the hotel's contact information (email, address, telephone number…) in your confirmation email after you have made your reservation."
-msgstr "Vous ne payez que le dépôt (10%% du montant total) pour confirmer et garantir votre réservation. Le montant restant (90%%) est payable à votre arrivée. Vous trouverez les coordonnées de l’établissement (email, adresse, numéro de téléphone …) dans votre courriel de confirmation après avoir effectué votre réservation."
+msgstr "Vous ne payez que le dépôt (10%% du montant total) pour confirmer et garantir cette réservation. Le montant restant (90%%) est payable à votre arrivée. Vous trouverez les coordonnées de l’établissement (email, adresse, numéro de téléphone …) dans votre courriel de confirmation après avoir effectué votre réservation."
 
 #: ../code/application/views/hb/booking_view.php:346
 #: ../code/application/controllers/cadmin.php:26
@@ -8741,7 +8741,7 @@ msgstr "Mes établissements favoris"
 #: ../code/application/views/helpfile/pofields.php:823
 #, php-format
 msgid "You only pay the deposit (%d%% of total amount) to confirm and secure your reservation now. The remaining amount (%d%%) is payable upon arrival. You will find the property's contact information (email, address, telephone number…) in your confirmation email after you have made your reservation."
-msgstr "Vous ne payez que le dépôt (%d%% du montant total) pour confirmer et garantir votre réservation maintenant. Le montant restant (%d%%) est payable à l'arrivée. Vous trouverez les coordonnées de létablissment (email, adresse, numéro de téléphone …) dans votre email de confirmation après avoir effectué votre réservation."
+msgstr "Vous ne payez que le dépôt (%d%% du montant total) pour confirmer et garantir cette réservation maintenant. Le montant restant (%d%%) est payable à l'arrivée. Vous trouverez les coordonnées de l'établissement (email, adresse, numéro de téléphone …) dans votre email de confirmation après avoir effectué votre réservation."
 
 #: ../code/application/views/helpfile/pofields.php:825
 #: ../code/application/views/helpfile/pofields.php~:825
@@ -8822,7 +8822,7 @@ msgstr "Dépôt à payer maintenant (%d)"
 #: ../code/application/views/helpfile/pofields.php~:823
 #, php-format
 msgid "You only pay the deposit (%d of total amount) to confirm and secure your reservation now. The remaining amount (%d) is payable upon arrival. You will find the property's contact information (email, address, telephone number…) in your confirmation email after you have made your reservation."
-msgstr "Vous ne payez que le dépôt (%d du montant total) pour confirmer et garantir votre réservation maintenant. Le montant restant (%d) est payable à l'arrivée. Vous trouverez les coordonnées de létablissment (email, adresse, numéro de téléphone …) dans votre email de confirmation après avoir effectué votre réservation."
+msgstr "Vous ne payez que le dépôt (%d du montant total) pour confirmer et garantir cette réservation maintenant. Le montant restant (%d) est payable à l'arrivée. Vous trouverez les coordonnées de l'établissement (email, adresse, numéro de téléphone …) dans votre email de confirmation après avoir effectué votre réservation."
 
 #: ../code/application/views/helpfile/pofields.php~:824
 #, php-format
