--- a/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
@@ -9713,19 +9713,19 @@ msgid "Most Popular Types"
 msgstr "Type le plus populaire"
 
 #: ../code/application/views/helpfile/pofields.php:842
-#, fuzzy, php-format
+#, php-format
 msgid "Save"
-msgstr "Enregistrer cette note"
+msgstr "Sauvegarder"
 
 #: ../code/application/views/helpfile/pofields.php:843
-#, fuzzy, php-format
+#, php-format
 msgid "Last name"
-msgstr "Prénom"
+msgstr "Nom de Famille"
 
 #: ../code/application/views/helpfile/pofields.php:844
 #, php-format
 msgid "Newsletter subscription"
-msgstr ""
+msgstr "Inscription à la newsletter"
 
 #: ../code/application/views/helpfile/pofields.php~:822
 #, php-format
@@ -9789,12 +9789,10 @@ msgid "Number of nights:"
 msgstr "Nombre de nuits :"
 
 #: ../code/application/views/mustache/save_property_dialog.php:38
-#, fuzzy
 msgid "character left"
 msgstr "Caractères restants:"
 
 #: ../code/application/views/mustache/save_property_dialog.php:39
-#, fuzzy
 msgid "characters left"
 msgstr "Caractères restants:"
 
