--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-24 17:30+0300\n"
-"PO-Revision-Date: 2013-05-15 21:44+0200\n"
+"PO-Revision-Date: 2013-05-25 22:02+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -9498,15 +9497,15 @@ msgid "Saved favorite properties"
 msgstr "Elmentett kedvenc ingatlanok"
 
 #: ../code/application/views/helpfile/pofields.php:823
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d%% of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d%%) is payable upon arrival. You "
 "will find the property's contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-"Az előleget (%d) a szobafoglalás visszaigazolása és biztosítása érdekében "
-"kell befizetnie.  A fennmaradó összeget (%d) érkezéskor kell fizetni.  Az "
+"Az előleget (%d%%) a szobafoglalás visszaigazolása és biztosítása érdekében "
+"kell befizetnie.  A fennmaradó összeget (%d%%) érkezéskor kell fizetni.  Az "
 "ingatlan elérhetőségeit (email, cím, telefonszám…) a foglalást követően "
 "emailben fogja megkapni."
 
@@ -9574,14 +9573,14 @@ msgstr ""
 "későbbi időpontban könnyen lefoglahatja."
 
 #: ../code/application/views/helpfile/pofields.php:840
-#, fuzzy, php-format
+#, php-format
 msgid "Most Popular Amenities"
-msgstr "Legkedveltebbek"
+msgstr "Legnépszerűbb feltételek"
 
 #: ../code/application/views/helpfile/pofields.php:841
-#, fuzzy, php-format
+#, php-format
 msgid "Most Popular Types"
-msgstr "Legkedveltebbek"
+msgstr "Legnépszerűbb típusok"
 
 #: ../code/application/views/helpfile/pofields.php:842
 #, fuzzy, php-format
