--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-24 17:30+0300\n"
-"PO-Revision-Date: 2013-05-20 21:36+0200\n"
+"PO-Revision-Date: 2013-05-25 22:04+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -9378,16 +9377,16 @@ msgid "Saved favorite properties"
 msgstr "즐겨찾기에 호텔이 저장됨"
 
 #: ../code/application/views/helpfile/pofields.php:823
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d%% of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d%%) is payable upon arrival. You "
 "will find the property's contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-" 지금, 예약을 확정하기 위한 보증금 (총 금액의 %d)을 지불해야합니다.나머지 금"
-"액 (%d)은  도착시 지불하시면 됩니다.  예약을 한 후, 확인 메일에서 호텔의 연락"
-"처 정보 (이메일, 주소, 전화 번호, …)을 찾을 수 있습니다."
+" 지금, 예약을 확정하기 위한 보증금 (총 금액의 %d%%)을 지불해야합니다.나머지 "
+"금액 (%d%%)은  도착시 지불하시면 됩니다.  예약을 한 후, 확인 메일에서 호텔의 "
+"연락처 정보 (이메일, 주소, 전화 번호, …)을 찾을 수 있습니다."
 
 #: ../code/application/views/helpfile/pofields.php:825
 #: ../code/application/views/helpfile/pofields.php~:825
