misc po changes May 27

--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -8752,7 +8752,7 @@ msgstr "Montant déjà payé:"
 #: ../code/application/views/helpfile/pofields.php:830
 #, php-format
 msgid "This is the time your room will be ready the day of your arrival and the time you will need to leave your room the day of your departure. Most properties will store your luggage in a safe space if you arrive early or leave later and are open 24 hours a day. Please review the list of services offered by this particular property to confirm they are available."
-msgstr "C'est l’heure à laquelle votre chambre sera prête le jour de votre arrivée et l’heure que vous devrez libérer votre chambre le jour de votre départ. La plupart des établissements peuvent garder vos bagages dans un lieu sûr si vous arrivez plus tôt ou si vous partez plus tard, et sont ouvert 24 heures sur 24. S'il vous plaît veuillez vérifier sur la liste des services offerts par cet établissement en particulier que ces services sont disponibles."
+msgstr "C'est l’heure à laquelle votre chambre sera prête le jour de votre arrivée et l’heure que vous devrez libérer votre chambre le jour de votre départ. La plupart des établissements peuvent garder vos bagages dans un lieu sûr si vous arrivez plus tôt ou si vous partez plus tard, et sont ouverts 24 heures sur 24. S'il vous plaît veuillez vérifier la liste des services offerts par cet établissement sur cette page."
 
 #: ../code/application/views/helpfile/pofields.php:831
 #, php-format
